--- a/html/style_guide.html
+++ b/html/style_guide.html
@@ -344,6 +344,14 @@
       <input type="text" class="default-input">
     </div>
   </div>
+  <h2>select</h2>
+  <div class="sample">
+    default-select
+    <select name="" id="" class="default-input input-md">
+      <option value="">可记</option>
+      <option value="">可记</option>
+    </select>
+  </div>
 
   <h2>傍瘤荤亲 bottom</h2>
   <div class="sample">
