--- a/html/36.html
+++ b/html/36.html
@@ -19,7 +19,7 @@
       <div class="input-wrap">
         <input type="text" name="" id="" class="default-input input-md" placeholder="이름을 입력하세요">
         <div class="cell-phone">
-          <input type="text" maxlength="4" name="" id="" class="default-input input-sm">
+          <input type="text" maxlength="4" name="" id="" class="default-input input-sm" placeholder="휴대전화">
           <span class="dash">-</span>
           <input type="text" maxlength="4" name="" id="" class="default-input input-sm">
           <span class="dash">-</span>
