--- a/html/37.html
+++ b/html/37.html
@@ -159,11 +159,11 @@
           <td>
             <div class="class-period">
               <label class="radio-wrap">
-                <input type="radio" name="level" checked="">
+                <input type="radio" name="payment" checked="">
                 <span>무통장입금</span>
               </label>
               <label class="radio-wrap">
-                <input type="radio" name="level">
+                <input type="radio" name="payment">
                 <span>신용카드</span>
               </label>
             </div>
