--- a/html/34.html
+++ b/html/34.html
@@ -30,7 +30,7 @@
         <tr>
           <th>아이디</th>
           <td>
-            <input type="text" name="" id="" class="default-input input-md with-button">
+            <input type="text" name="" id="" class="default-input with-button">
             <button class="btn btn-sm btn-primary btn-round">중복확인</button>
             <div class="id-check-wrap">
               <p class="notice">
