--- a/html/31.html
+++ b/html/31.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>고시포코</title>
   <link rel="stylesheet" href="../assets/style/style_mobile.css">
+  <script src="../assets/script/script.js"></script>
 </head>
 
 <body>
   <div class="gnb">
     <div class="prefix">
-      <a href="" class="btn-menu">
+      <a href="javascript:void(0)" onclick="openMenu();" class="btn-menu">
         <span class="icon-hamburger"></span>
       </a>
     </div>
@@ -35,6 +36,33 @@
       <li><a href="">샘플강좌</a></li>
       <li><a href="">강의보기</a></li>
     </ul>
+  </div>
+  <div class="all-menu">
+    <div class="header">
+      <img src="../image/icon_logo_menu.png" alt="고시포코 로고" class="logo-menu">
+      <span class="user">홍길동님</span>
+      <a href="javascript:void(0);" onclick="closeMenu()" class="btn-close">
+        <span class="icon-close"></span>
+      </a>
+    </div>
+    <div class="links">
+      <ul>
+        <li><a href="">회원가입</a></li>
+        <li><a href="">로그인</a></li>
+      </ul>
+    </div>
+    <div class="menu">
+      <ul>
+        <li><a href="">교육과목</a></li>
+        <li><a href="">수강신청</a></li>
+        <li><a href="">시험일정</a></li>
+        <li><a href="">샘플강좌</a></li>
+        <li><a href="">강의보기</a></li>
+        <li><a href="">고객센터</a></li>
+        <li><a href="">1:1상담</a></li>
+        <li><a href="">아이디찾기</a></li>
+      </ul>
+    </div>
   </div>
   <div class="main">
     <div class="main-visual">
