--- a/html/48.html
+++ b/html/48.html
@@ -44,23 +44,47 @@
       </div>
       <ul>
         <li>
-          <a href="" title="study 단과반 수강신청">
+          <div class="class-banner">
             <img src="../image/appy_class_01.jpg" alt="study 단과반 수강신청">
+            <span class="title">교재 + 동영상 강의</span>
+            <div class="price">
+              <div class="as-is">880,000원</div>
+              <div class="to-be">780,000원</div>
+            </div>
+            <a href="" class="btn-link">수강신청 하러가기</a>
           </a>
         </li>
         <li>
-          <a href="" title="study 단기반 수강신청">
-            <img src="../image/appy_class_02.jpg" alt="study 단기반 수강신청">
+          <div class="class-banner">
+            <img src="../image/appy_class_02.jpg" alt="study 단과반 수강신청">
+            <span class="title">교재 + 동영상 강의</span>
+            <div class="price">
+              <div class="as-is">880,000원</div>
+              <div class="to-be">780,000원</div>
+            </div>
+            <a href="" class="btn-link">수강신청 하러가기</a>
           </a>
         </li>
         <li>
-          <a href="" title="study 종합반 수강신청">
-            <img src="../image/appy_class_03.jpg" alt="study 종합반 수강신청">
+          <div class="class-banner">
+            <img src="../image/appy_class_03.jpg" alt="study 단과반 수강신청">
+            <span class="title">교재 + 동영상 강의</span>
+            <div class="price">
+              <div class="as-is">880,000원</div>
+              <div class="to-be">780,000원</div>
+            </div>
+            <a href="" class="btn-link">수강신청 하러가기</a>
           </a>
         </li>
         <li>
-          <a href="" title="study 합격보장반 수강신청">
-            <img src="../image/appy_class_04.jpg" alt="study 합격보장반 수강신청">
+          <div class="class-banner">
+            <img src="../image/appy_class_04.jpg" alt="study 단과반 수강신청">
+            <span class="title">교재 + 동영상 강의</span>
+            <div class="price">
+              <div class="as-is">880,000원</div>
+              <div class="to-be">780,000원</div>
+            </div>
+            <a href="" class="btn-link">수강신청 하러가기</a>
           </a>
         </li>
       </ul>
